# gen-ai-final-project

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  start.bat  start.sh
backend/: __init__.py  config.py  council.py  main.py  ollama_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
